--- a/Assets/Scenes/QuestUI.yaml
+++ b/Assets/Scenes/QuestUI.yaml
@@ -4,6 +4,7 @@ GameObjects:
     UUID: 12889665759808604316
     Active: false
     Layer: ""
+    Instancing: false
     Type: UI
     SortingOrder: 0
     PassIndex: 0
@@ -15,6 +16,7 @@ GameObjects:
     UUID: 12864424915382906858
     Active: true
     Layer: Default
+    Instancing: false
     Type: UI
     SortingOrder: 0
     PassIndex: 0
@@ -30,9 +32,10 @@ GameObjects:
     UUID: 2589783532281847914
     Active: false
     Layer: Default
+    Instancing: false
     Type: UI
     SortingOrder: 0
-    PassIndex: 1
+    PassIndex: 14
     Hovering: false
     Com_Transform:
       Position: [300.869629, 360]
@@ -40,7 +43,7 @@ GameObjects:
     Com_VIBuffer:
       TexturePath: ..\..\Assets\UITexture\Hud\WindowBg.png
       TextureMaskPath: ""
-      TextureNoisePath: ""
+      TextureNoisePath: ..\..\Assets\UITexture\BackImg\Window_BG_Quest.dds
       TextureAnyPath: ""
       Color: [0, 0, 0, 1]
     Children:
@@ -50,6 +53,7 @@ GameObjects:
     UUID: 897123930233956990
     Active: false
     Layer: Default
+    Instancing: false
     Type: UI
     SortingOrder: 0
     PassIndex: 0
@@ -63,10 +67,13 @@ GameObjects:
       Scale: [1, 1]
       LayerDepth: 0
       IsCenter: true
+      ShaderCut: false
+      IsKorean: false
   - Name: QuestShortcut
     UUID: 16287995631125625181
     Active: true
     Layer: Default
+    Instancing: false
     Type: UI
     SortingOrder: 0
     PassIndex: 1
@@ -87,6 +94,7 @@ GameObjects:
     UUID: 8499379159806179817
     Active: true
     Layer: Default
+    Instancing: false
     Type: UI
     SortingOrder: 0
     PassIndex: 0
@@ -100,10 +108,13 @@ GameObjects:
       Scale: [0.699999988, 0.699999988]
       LayerDepth: 0
       IsCenter: false
+      ShaderCut: false
+      IsKorean: false
   - Name: QuestPurpose
     UUID: 13067805310386615929
     Active: true
     Layer: Default
+    Instancing: false
     Type: UI
     SortingOrder: 0
     PassIndex: 0
@@ -117,10 +128,13 @@ GameObjects:
       Scale: [0.649999976, 0.649999976]
       LayerDepth: 0
       IsCenter: false
+      ShaderCut: false
+      IsKorean: false
   - Name: QuestShortcut
     UUID: 12805142118666484563
     Active: true
     Layer: Default
+    Instancing: false
     Type: UI
     SortingOrder: 0
     PassIndex: 1
@@ -141,6 +155,7 @@ GameObjects:
     UUID: 10117224854208029290
     Active: true
     Layer: Default
+    Instancing: false
     Type: UI
     SortingOrder: 0
     PassIndex: 0
@@ -154,10 +169,13 @@ GameObjects:
       Scale: [0.699999988, 0.699999988]
       LayerDepth: 0
       IsCenter: false
+      ShaderCut: false
+      IsKorean: false
   - Name: QuestPurpose
     UUID: 11513149226949606065
     Active: true
     Layer: Default
+    Instancing: false
     Type: UI
     SortingOrder: 0
     PassIndex: 0
@@ -171,10 +189,13 @@ GameObjects:
       Scale: [0.649999976, 0.649999976]
       LayerDepth: 0
       IsCenter: false
+      ShaderCut: false
+      IsKorean: false
   - Name: QuestShortcut
     UUID: 15542191811747929715
     Active: true
     Layer: Default
+    Instancing: false
     Type: UI
     SortingOrder: 0
     PassIndex: 1
@@ -195,6 +216,7 @@ GameObjects:
     UUID: 12415205669606939399
     Active: true
     Layer: Default
+    Instancing: false
     Type: UI
     SortingOrder: 0
     PassIndex: 0
@@ -208,10 +230,13 @@ GameObjects:
       Scale: [0.699999988, 0.699999988]
       LayerDepth: 0
       IsCenter: false
+      ShaderCut: false
+      IsKorean: false
   - Name: QuestPurpose
     UUID: 5950913508321936982
     Active: true
     Layer: Default
+    Instancing: false
     Type: UI
     SortingOrder: 0
     PassIndex: 0
@@ -225,3 +250,5 @@ GameObjects:
       Scale: [0.649999976, 0.649999976]
       LayerDepth: 0
       IsCenter: false
+      ShaderCut: false
+      IsKorean: false
