--- a/Client/Default/Client.vcxproj
+++ b/Client/Default/Client.vcxproj
@@ -208,15 +208,18 @@
     <ClInclude Include="..\Public\EffectBloodDecal.h" />
     <ClInclude Include="..\Public\EffectDropRock.h" />
     <ClInclude Include="..\Public\EffectDropRockDust.h" />
+    <ClInclude Include="..\Public\EffectDustWh.h" />
     <ClInclude Include="..\Public\EffectFlash.h" />
     <ClInclude Include="..\Public\EffectMeteoExpolFire.h" />
     <ClInclude Include="..\Public\EffectMeteoExpolRing.h" />
     <ClInclude Include="..\Public\EffectRockDecal.h" />
     <ClInclude Include="..\Public\EffectRockDust.h" />
     <ClInclude Include="..\Public\EffectSmoke.h" />
+    <ClInclude Include="..\Public\EffectSoilDecal.h" />
     <ClInclude Include="..\Public\EffectSoilDust.h" />
     <ClInclude Include="..\Public\EffectUrsaDust.h" />
     <ClInclude Include="..\Public\EffectUrsaShoulder.h" />
+    <ClInclude Include="..\Public\EffectUrsaWind.h" />
     <ClInclude Include="..\Public\EffectVine.h" />
     <ClInclude Include="..\Public\Element_Bomb.h" />
     <ClInclude Include="..\Public\Bomb_Center.h" />
@@ -379,6 +382,7 @@
     <ClCompile Include="..\Private\EffectDropRock.cpp" />
     <ClCompile Include="..\Private\EffectDropRockDust.cpp" />
     <ClCompile Include="..\Private\EffectDust.cpp" />
+    <ClCompile Include="..\Private\EffectDustWh.cpp" />
     <ClCompile Include="..\Private\EffectEAFire.cpp" />
     <ClCompile Include="..\Private\EffectFireBall.cpp" />
     <ClCompile Include="..\Private\EffectFlash.cpp" />
@@ -398,11 +402,13 @@
     <ClCompile Include="..\Private\EffectRockDecal.cpp" />
     <ClCompile Include="..\Private\EffectRockDust.cpp" />
     <ClCompile Include="..\Private\EffectSmoke.cpp" />
+    <ClCompile Include="..\Private\EffectSoilDecal.cpp" />
     <ClCompile Include="..\Private\EffectSwordRing.cpp" />
     <ClCompile Include="..\Private\EffectMeteoTrail.cpp" />
     <ClCompile Include="..\Private\EffectSoilDust.cpp" />
     <ClCompile Include="..\Private\EffectUrsaDust.cpp" />
     <ClCompile Include="..\Private\EffectUrsaShoulder.cpp" />
+    <ClCompile Include="..\Private\EffectUrsaWind.cpp" />
     <ClCompile Include="..\Private\EffectVine.cpp" />
     <ClCompile Include="..\Private\Element_Bomb.cpp" />
     <ClCompile Include="..\private\ElfNPC.cpp" />
